# Django_projeto

./: .env_exemplo  .gitignore  README.md  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt  trufas.json
config/: settings.py  urls.py
media/images/: 3128bf9a-afc8-4eb7-961e-4391a4f9a94d  8a50a75b-3ce9-42d2-9b91-e1b7983d0aac  9a1f61b2-8fc2-49a3-8495-0ad71a6e8f9c  abb06a12-d57f-427e-a3b3-e5282b8cdc2c  b4df1036-b659-4048-b15f-7b49a143d6be
trufa/: admin.py  apps.py  models.py  serializers.py
trufa/migrations/: 0001_initial.py  0002_rename_categoria_trufa.py  0002_trufa_capa.py  0003_rename_capa_trufa_imagem_trufa_preco_and_more.py  0004_trufa_nome.py  0005_categoria_categoriaserializer_and_more.py  0006_categoriaviewset.py  0007_remove_trufa_categoria_trufa_sem_lactose.py  0008_delete_categoria_delete_categoriaserializer_and_more.py  0009_remove_trufa_ao_leite.py  0010_remove_trufa_sem_lactose.py
trufa/models/: __init__.py  categoria.py  trufa.py
trufa/serializers/: __init__.py  categoria.py  trufa.py
trufa/view/: __init__.py  categoria.py  trufa.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
