[project]
name = "trufas"
version = "0.1.0"
description = ""
authors = [
    {name = "Leticia", email = "leticiaborgess.oficial@gmail.com"},
]
dependencies = [
    "django>=4.2.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
