[project]
name = "trufas"
version = "0.1.0"
description = ""
authors = [
    {name = "Leticia", email = "leticiaborgess.oficial@gmail.com"},
]
dependencies = [
    "django>=4.2.5",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.2.0",
    "setuptools>=68.2.2",
    "python-magic>=0.4.27",
    "Pillow>=10.0.1",
    "drf-spectacular>=0.26.5",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
    "python-dotenv>=1.0.0",
    "netifaces>=0.11.0",
    "gunicorn>=21.2.0",
    "whitenoise[brotli]>=6.6.0",
    "psycopg2-binary>=2.9.9",
    "django-cloudinary-storage>=0.3.0",
]

requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }


[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"